# azure_ai_mvp

./: README.md  azure_script.txt  config.json  kinolights_ranking_20250617.csv  kinolights_ranking_20250620.csv  pyproject.toml
.github/workflows/: main_kinolight-crawler-web-app.yml  main_media-recommend-web-app.yml
app/crawler/: kinolights.py  naver_search.py  news.py  serpAPI.py  tmdb_movie.py  tmdb_tv.py  utils.py  youtube.py
app/functions/youtube/: logic.py  requirements.txt  youtube_scrapper.py
app/functions/youtube/crawler_timer/: __init__.py  function.json
app/functions/youtube/trigger_http/: __init__.py
app/webapp/: app.py  chat.py  run.sh  streamlit.sh
ml_pipeline/deployments/: youtube_pipeline.yml
ml_pipeline/environments/: basic-env.yml  conda.yml
ml_pipeline/scripts/: clean_text.py  embedding_generate.py  fetch_youtube_data.py  gpt_labeling.py  upload_to_aisearch.py
